create and adapted home

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                 </nav>
             </div>
         </header>
+        <section class="home">
+            <div class="container home-container">
+                <h1 class="home-title">Discover</h1>
+                <p class="home-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sint ratione perferendis suscipit eius eum saepe officia minus quibusdam unde hic distinctio voluptatem recusandae, tempora dolorem molestiae nostrum, consequatur veniam!</p>
+                <a href="#" class="home-link">Booking tour</a>
+            </div>
+        </section>
     </div>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
