create and adapted favorable

--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
                 <a href="#" class="home-link">Booking tour</a>
             </div>
         </section>
+        <section class="favorable">
+            <h2 class="section-title">Favorable</h2>
+            <div class="container fav-container">
+                <article class="fav-item">
+                    <img src="https://picsum.photos/id/10/600/600" alt="" class="fav-img">
+                    <div class="fav-text">
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img src="https://picsum.photos/id/1006/600/600" alt="" class="fav-img">
+                    <div class="fav-text">
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img src="https://picsum.photos/id/1015/600/600" alt="" class="fav-img">
+                    <div class="fav-text">
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img src="https://picsum.photos/id/1018/600/600" alt="" class="fav-img">
+                    <div class="fav-text">
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
+                    </div>
+                </article>
+
+            </div>
+
+        </section>
     </div>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
