service block  and slider

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <div class="wrapper">
@@ -74,13 +75,49 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
                     </div>
                 </article>
-
             </div>
-
+        </section>
+        <section class="service">
+            <div class="service-slider">
+                <div class="slide">
+                    <img src="https://picsum.photos/id/10/1200/620" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1015/1200/620" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1006/1200/620" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1018/1200/620" alt="">
+                </div>
+            </div>
+            <div class="service-block">
+                <h2 class="section-title">Service</h2>
+                <div class="container service-container">
+                    <div class="service-item">
+                        <img src="/img/eat.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
+                    </div>
+                    <div class="service-item">
+                        <img src="/img/hotel.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
+                    </div>
+                    <div class="service-item">
+                        <img src="/img/aa.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
+                    </div>
+                    <div class="service-item">
+                        <img src="/img/oto.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/scripts.js"  ></script>
 </body>
 </html>
