--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -156,6 +157,45 @@
                 </a>
             </div>
             <button class="more">See more</button>
+        </section>
+        <section class="contacts">
+            <h2>Contact</h2>
+            <div class="container contacts-container">
+                <div class="contact-info">
+                    <a href="#" class="logo footer-logo">Discover</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, eligendi facere enim, dolore tempora numquam dolor aspernatur amet alias officiis molestiae vitae assumenda debitis quaerat? Sapiente quibusdam similique natus laboriosam.</p>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>So 188 Nguyen Xien, Thanh Xuan, Ha Noi</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone-square-alt"></i>
+                        <a href="tel:+84 985 234 812">+84 985 234 812</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:Huuluong.arc@gmail.com">Huuluong.arc@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-globe"></i>
+                        <a target="_blank" href="//kientructrinhgia.vn">kientructrinhgia.vn</a>
+                    </div>
+                    <div class="socials">
+						<a class="fb" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+						<a class="gp" href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+						<a class="in" href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+						<a class="tw" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+					</div>
+                </div>
+                <div class="contact-form">
+                    <form action="">
+                        <input type="text" placeholder="Your name">
+                        <input type="email" name="" id="" placeholder="Email">
+                        <textarea placeholder="Message"></textarea>
+                        <button type="submit">Send<i class="fas fa-envelope"></i></button>
+                    </form>
+                </div>
+            </div>
         </section>
     </div>
 
