--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -26,8 +27,8 @@
     <div class="wrapper">
         <header>
             <div class="container">
-                <a href="#" class="logo">Discover</a>
-                <nav>
+                <a href="#" class="logo" data-aos="slide-right">Discover</a>
+                <nav data-aos="slide-left">
                     <button class="mini-menu">Menu</button>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -41,36 +42,36 @@
         </header>
         <section class="home">
             <div class="container home-container">
-                <h1 class="home-title">Discover</h1>
-                <p class="home-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sint ratione perferendis suscipit eius eum saepe officia minus quibusdam unde hic distinctio voluptatem recusandae, tempora dolorem molestiae nostrum, consequatur veniam!</p>
-                <a href="#" class="home-link">Booking tour</a>
+                <h1 class="home-title" data-aos="fade-up" data-aos-delay="50">Discover</h1>
+                <p class="home-text" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sint ratione perferendis suscipit eius eum saepe officia minus quibusdam unde hic distinctio voluptatem recusandae, tempora dolorem molestiae nostrum, consequatur veniam!</p>
+                <a href="#" class="home-link" data-aos="fade-up" data-aos-delay="150">Booking tour</a>
             </div>
         </section>
         <section class="favorable">
             <h2 class="section-title">Favorable</h2>
             <div class="container fav-container">
-                <article class="fav-item">
+                <article class="fav-item" data-aos="flip-left">
                     <img src="https://picsum.photos/id/10/600/600" alt="" class="fav-img">
                     <div class="fav-text">
                         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
                     </div>
                 </article>
-                <article class="fav-item">
+                <article class="fav-item" data-aos="flip-left">
                     <img src="https://picsum.photos/id/1006/600/600" alt="" class="fav-img">
                     <div class="fav-text">
                         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
                     </div>
                 </article>
-                <article class="fav-item">
+                <article class="fav-item" data-aos="flip-left">
                     <img src="https://picsum.photos/id/1015/600/600" alt="" class="fav-img">
                     <div class="fav-text">
                         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis quod libero explicabo sint id impedit aut inventore quos nobis!</p>
                     </div>
                 </article>
-                <article class="fav-item">
+                <article class="fav-item" data-aos="flip-left">
                     <img src="https://picsum.photos/id/1018/600/600" alt="" class="fav-img">
                     <div class="fav-text">
                         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
@@ -170,7 +171,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone-square-alt"></i>
-                        <a href="tel:+84 985 234 812">+84 985 234 812</a>
+                        <a href="tel:+84985234812">+84 985 234 812</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -188,9 +189,9 @@
 					</div>
                 </div>
                 <div class="contact-form">
-                    <form action="">
+                    <form action="mail.php">
                         <input type="text" placeholder="Your name">
-                        <input type="email" name="" id="" placeholder="Email">
+                        <input type="email" placeholder="Email">
                         <textarea placeholder="Message"></textarea>
                         <button type="submit">Send<i class="fas fa-envelope"></i></button>
                     </form>
@@ -202,6 +203,7 @@
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/scripts.js"  ></script>
 </body>
 </html>
