fix service block icons

--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
                 <h2 class="section-title">Service</h2>
                 <div class="container service-container">
                     <div class="service-item">
-                        <img src="/img/eat.png" alt="">
+                        <img src="img/eat.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
                     </div>
                     <div class="service-item">
-                        <img src="/img/hotel.png" alt="">
+                        <img src="img/hotel.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
                     </div>
                     <div class="service-item">
-                        <img src="/img/aa.png" alt="">
+                        <img src="img/aa.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
                     </div>
                     <div class="service-item">
-                        <img src="/img/oto.png" alt="">
+                        <img src="img/oto.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi similique modi vero minima quaerat aliquid nostrum eos labore tempore, repellendus distinctio dolorem laboriosam doloremque commodi blanditiis dolor suscipit ut?</p>
                     </div>
                 </div>
